# azure-openai-on-your-data-migrator

./: .env.example  .gitignore  AGENTS.md  FEATURE_COMPARISON.md  README.md  SKILLS.md  pyproject.toml  skills-lock.json
.agents/skills/oyd-to-foundry-migration/: SKILL.md
docs/: KNOWN_LIMITATIONS.md  MIGRATION_GUIDE.md  OYD-Migration-Findings-and-Execution-Guide.md  RBAC.md
oyd_migrator/: __init__.py  __main__.py
oyd_migrator/cli/: __init__.py  main.py
oyd_migrator/cli/commands/: __init__.py  discover.py  generate.py  migrate.py  validate.py
oyd_migrator/cli/wizards/: __init__.py  auth_wizard.py  discovery_wizard.py  migration_wizard.py  review_wizard.py
oyd_migrator/core/: __init__.py  config.py  constants.py  exceptions.py  logging.py
oyd_migrator/data/: feature_matrix.yaml
oyd_migrator/generators/: __init__.py  curl_samples.py  migration_report.py  sdk_samples.py
oyd_migrator/models/: __init__.py  foundry.py  migration.py  oyd.py  search.py
oyd_migrator/services/: __init__.py  agent_builder.py  aoai_discovery.py  auth.py  connection_manager.py  foundry_provisioner.py  search_inventory.py  test_runner.py
scripts/: run_migration.py
tests/: __init__.py  conftest.py  test_bug_fixes.py  test_coverage.py  test_models.py
